codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step1_start_ls.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1292
expression: active_blob(&chat)
---

CODEX · Tool Calls

┊ • Exploring
┊   └ List ls -la
